--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   "dependencies": {
     "dotenv": "17.2.0",
     "ejs": "3.1.10",
-    "express": "5.1.0"
+    "express": "5.1.0",
+    "mysql2": "^3.14.2",
+    "pg": "^8.16.3"
   },
   "devDependencies": {
     "nodemon": "3.1.10"
